# reportflow

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  .env.local  Dockerfile  Makefile  TESTING.md  alembic.ini  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  out.csv  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: admin.py  auth.py  health.py  reports.py  schedules.py  tenant.py  users.py
backend/app/core/: config.py  dependencies.py  rate_limit.py  security.py  utils.py
backend/app/db/: base.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 0e09cb8bd42c_add_unique_constraint_for_tenant_email.py  (+7 more)
backend/app/db/models/: __init__.py  dead_letter.py  mixins.py  report_job.py  schedule.py  tenant.py  user.py
backend/app/db/seed/: __init__.py  __main__.py
backend/app/schemas/: auth.py  health.py  report.py  schedule.py  user.py
backend/app/services/: auth_service.py  report_service.py  schedule_service.py  storage_service.py  user_service.py
backend/app/workers/: celery_app.py
backend/app/workers/tasks/: __init__.py  base.py  beat_schedule.py  cleanup_jobs.py  csv_export.py  pdf_report.py  sales_summary.py
backend/scripts/: check_user_role.py  create_system_admin.py  debug_dlq.py  set_admin_role.py  test_dlq.sh  test_flow.sh  test_job_cancel.sh  test_schedules.sh  test_ws.sh
backend/scripts/lib/: auth_helper.sh
backend/tests/integration/: conftest.py  test_admin_rbac.py  test_auth.py  test_full_flow.py  test_idempotency_redis.py  test_reports.txt  test_user_api.py
backend/tests/unit/: test_main_metrics.py
backend/tests/unit/services/: test_auth_service.py  test_report_service_idempotency.py  test_user_service.py
backend/tests/unit/workers/: test_worker_async_runner.py
(+47 files in other folders)
