[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.135.1",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.13.1",
    "sqlalchemy[asyncio]>=2.0.48",
    "uvicorn[standard]>=0.41.0",
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
    "faker>=40.8.0",
    "bcrypt==4.0.1",
    "celery[redis]>=5.6.2",
    "redis>=6.4.0",
    "aioboto3>=15.5.0",
    "weasyprint>=68.1",
    "jinja2>=3.1.6",
    "pandas>=3.0.1",
    "matplotlib>=3.10.8",
    "croniter>=6.2.2",
    "prometheus-fastapi-instrumentator>=7.1.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "testcontainers>=4.14.2",
]

[tool.ruff]
exclude = [
    ".venv",
    "app/db/migrations",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["."]
testpaths = ["tests"]
